# CO2CO2_AUTODIFF

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
co2_potential/: __init__.py  benchmark.py  wrapper.py
src/: Makefile  kit.h  mbCO2CO2.cpp  mbCO2CO2.h  poly-1b.cpp  poly-1b.h  poly-2b.cpp  poly-2b.h  sapt-s.cpp  x1b.cpp  x1b.h  x2b.cpp  x2b.h
